--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(Mergen
         vis/bitmap.hpp
         vis/camera.cpp
         vis/camera.hpp
+        vis/edge_detection.cpp
+        vis/edge_detection.hpp
         vis/global.hpp
         vis/memory.cpp
         vis/memory.hpp
